# aws_genai_architecture

./: CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  build_and_upload.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
aws_genai_architecture/: __init__.py  __main__.py  _version.py  cli.py
aws_genai_architecture/core/: __init__.py  architecture.py  communications.py  metrics.py  models.py  services.py
aws_genai_architecture/monitoring/: __init__.py  communication_monitor.py  console_logger.py
aws_genai_architecture/web/: __init__.py  app.py
aws_genai_architecture/web/static/: style.css
docs/: conf.py  index.rst  installation.rst  quickstart.md
tests/: __init__.py  conftest.py
tests/test_cli/: __init__.py  test_cli.py
tests/test_core/: __init__.py  test_architecture.py  test_services.py
tests/test_monitoring/: __init__.py  test_console_logger.py
tests/test_web/: __init__.py  test_app.py
